{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c7178d71-2e90-4990-9fa2-e4554965cf62",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "71735fc1-e25c-4f84-8a28-0e92fe21c946",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fb35c881-a42c-4d64-8832-ac2428d30aa2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "b51f0b31-93eb-436f-88e2-3e8441b94d2e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "e6f48154-50a2-4863-a458-f283b77e0b8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchMap",
                    "type": "Button",
                    "id": "385e22a8-0d96-4995-95fc-a49f5d1d1696",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "374e4c6e-ee53-4b70-80a9-c5f7732789a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeadTracking",
                    "type": "Value",
                    "id": "99e13289-bf80-4ede-a124-0cb8e801ff9a",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateGrabbed",
                    "type": "Value",
                    "id": "2b6c8493-815d-461f-a8b0-7d5bf57124bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleCursorLock",
                    "type": "Button",
                    "id": "86ce2dcd-27ca-47fd-ad3d-af2f5a0b9476",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeadRotation",
                    "type": "Value",
                    "id": "25cb912e-6090-4547-8016-c0e34ae8c05c",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenFileDialog",
                    "type": "Button",
                    "id": "d59da211-800c-4cd6-9851-943a6a4a19e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleFullscreen",
                    "type": "Button",
                    "id": "fb3a6c8a-754e-41d1-a2a1-63a5f0b69ccd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "e2650034-cb13-46a8-845d-59c069b0a0c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "89e59e91-e74a-4cb4-8b28-a0fdd84f297c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SendAnnouncementDialog",
                    "type": "Button",
                    "id": "9b160dd7-f50c-4ad6-93ee-7c69228d2f59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenStatsScreen",
                    "type": "Button",
                    "id": "3cdab635-ba80-48f4-8578-8f2557f8ed3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TogglePlayerVisibility",
                    "type": "Button",
                    "id": "e0462699-2fe5-4376-83d9-ba59e9ab45aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenChatDialog",
                    "type": "Button",
                    "id": "1ad9cc5e-b857-4f75-861f-ab5d370ebe6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveMapCamera",
                    "type": "Value",
                    "id": "c72344cc-49c2-44df-998e-31061b3a4096",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "2d1267a9-d382-474f-943c-5c95cfcf6615",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7dbec3ce-86a7-4fb2-9386-eb2d386d7845",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "02130952-fb74-42bc-8348-691cd76183f8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1e1f8d09-ac84-43af-8094-c5c3742753cc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e6e742c9-43f1-461a-a7bf-d192d40d9e29",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f4e429bb-1e2d-4c92-931e-00b7d4bb1a1a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "39953acd-4bcf-4d83-a0cf-07cc8bb32d07",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48cc4dcf-2b67-4cf7-861b-b3ee2ddf2adf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ba594ac-1294-4ffe-8867-8b58bf55b33c",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e5c8087-963c-43e5-a4ac-665ec869031a",
                    "path": "<XRController>{RightHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e4f8983-bdaa-4856-918c-753f77bb118f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24148b60-8018-4490-bed2-d00580ca7226",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e58980c-2243-4cfb-8e41-b9260493f396",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9982845-6280-424b-b2cb-be36f61622e4",
                    "path": "<Keyboard>/#(M)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SwitchMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6f53868-cbaa-40f2-bb2d-ec328b7e2cd7",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "SwitchMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5471362-a257-4683-8efc-5e5259393fd0",
                    "path": "<XRController>{LeftHand}/touchpadClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "SwitchMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3294687-0c0a-4b6b-8795-42798a1d7a6f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47a6b626-15dc-4b32-be8d-a72a4b75b518",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "HeadTracking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "RightClickDelta",
                    "id": "a58b2a53-6bc0-45d8-963a-727f6ccf69b3",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateGrabbed",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "11c02a27-06c8-49b8-9526-40dd52554855",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RotateGrabbed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "9b2a4da2-fe45-4f1b-b147-530b9d861e1a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RotateGrabbed",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4d3a5677-c37e-4a91-b6e2-8b874b0d5852",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ToggleCursorLock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aec9043-cce8-48c3-aac2-5edaf5ad26cf",
                    "path": "<XRHMD>/centerEyeRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "HeadRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e457939c-9da7-456d-9e77-1fbf583d49b9",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "OpenFileDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc1aa995-19e6-4a5c-8d00-7c7430bb33db",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "OpenFileDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e16ab135-db2c-4356-bb53-6723ca9311a2",
                    "path": "<Keyboard>/#(F)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ToggleFullscreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a644436-9a6e-42ee-83a3-f5a30d9ad5d6",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "PC",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a051534-3a8b-4c97-909e-6007af8d405a",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "VR",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72730817-b98b-418d-a823-8f13ca38d719",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SendAnnouncementDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9494becc-b17c-4abd-a72b-660b4fcc4943",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "OpenStatsScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33789374-fa92-45c8-82c0-c6ae59ddc97d",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "OpenStatsScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b83dfe29-5deb-4ded-8bbb-be155f3a20ac",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "TogglePlayerVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d426781a-f70c-43aa-971f-c56bd4b92fc1",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "VR",
                    "action": "TogglePlayerVisibility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c5e114d-6d56-4420-a860-9d77d75d1edd",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "OpenChatDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow Keys",
                    "id": "a3da35c7-2bd2-44a4-a383-2b560483f3fc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveMapCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "826aeb52-6b06-4ae7-b43a-23351cef4b99",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveMapCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8a919059-f604-4de7-8c89-a66eba4cb9a0",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveMapCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a7c1804a-f3ba-4b38-a530-21e59fcb1867",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveMapCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52debbd7-d495-4a1f-a186-de5e7c6fb665",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveMapCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a8355c70-f8a3-4838-b530-ea438cdcbce6",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8518fd0-b721-4c0b-8d7a-79ee26f355dd",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "PC",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d812be2-f0c0-4d19-8c14-40db8799078a",
                    "path": "<XRController>{LeftHand}/joystickClicked",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "VR",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": [
                {
                    "devicePath": "<XRHMD>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}